Tue Jul 31 21:39:37 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Auto_Functor.cpp:
        
          Removed errant ChangeLog-like lines at the top of the file.

Tue Jul 31 21:27:25 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.cpp:

          Moved the template specialization to the header file and made it
          "inline". This resolved linking problems with some compilers,
          which complained about either unresolved references or
          multiply-defined instances of cleanup(). Bugzilla 2980.


Tue Jul 31 18:48:25 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ace/Auto_Functor.h:
        * ace/Auto_Functor.inl:
        * ace/Auto_Functor.cpp:

          Zapped ACE_THROW_SPEC

        * ace/Global_Macros.h:

          Guarded ACE_THROW_SPEC with ACE_LACKS_DEPRECATED_MACROS. The
          ACE_THROW_SPEC macro now has been deprecated.

          The above changes fix bugzilla 3008.

Tue Jul 31 18:37:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_dirent.h:
          Removed ACE_STD_NAMESPACE for rewinddir, it causes compile errors
          and fixed compile errors with Borland C++ Unicode

Tue Jul 31 18:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/*.{h,cpp,inl}:
          Replaced all occurences of ACE_LIB_TEXT with ACE_TEXT as noted in
          bugzilla 3021

Tue Jul 31 17:15:47 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Fixed compile error on platforms that define ACE_LACKS_REWINDDIR.

Tue Jul 31 15:02:34 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test_IPV6.cpp: Added some more diagnostic output and
          changed the enable-loopback sockopt from char to int to try and avoid
          some platform issues, particularly on Windows.

Tue Jul 31 14:45:35 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
